My Third Commit

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -18,8 +18,9 @@ h1 {
 }
 
 h2 {
-    color: darkslateblue;
+    color: darkslategrey;
     font-family: sans-serif;
+    font-style: italic;
     font-size: 30px;
 }
 
